@@ -1,3 +1,8 @@
+2007-11-14  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (PyObj_from_UTF8): New function.  Used in lots
+	of places where text attributes are decoded (part of bug #382291).
+
 2007-10-15  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.28.
